[tool.poetry]
name = "repl_python3_CardGame108"
version = "0.1.0"
description = ""
authors = ["lunargravity <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
